new openapi interfaces integrated
